--- a/index.html
+++ b/index.html
@@ -46,85 +46,93 @@
 <!-- sec_profile -->
 <section class="sec sec_profile">
     <div class="container">
-        <img alt="" class="abs_pic circle" src="img/abs_pic/circle.svg">
-        <img alt="" class="abs_pic dubl_line_vertical" src="img/abs_pic/dubl_line.svg">
         <div class="row">
-            <div class="col-md-8">
-                <h1>Константин Лашкевич</h1>
-                <p class="undertitle">Инвестор IT, ed-tech, LMS <br> Реальный практик корпоративного управления <i>идеолог
-                    Позитивного Менеджмента</i></p>
-                <div class="card">
-                    <ul>
-                        <li><img src="img/sec_1/ok.svg" alt="ok"><span><b>№1</b> в России по трансформации корпоративной культуры для Х-кратного роста</span>
-                        </li>
-                        <li><img src="img/sec_1/ok.svg" alt="ok">20 лет в бизнесе с акционерами топ Forbes</li>
-                        <li><img src="img/sec_1/ok.svg" alt="ok">11 лет управления холдингами</li>
-                        <li><img src="img/sec_1/ok.svg" alt="ok">5 лет на позиции Президента холдинга RFP Group</li>
-                        <li><img src="img/sec_1/ok.svg" alt="ok">Возглавлял холдинги “ННК” и “Вторчермет НЛМК” и вывел в
-                            лидеры рынка
-                        </li>
-                        <li><img src="img/sec_1/ok.svg" alt="ok">Инвестор в проекте Smart Expert</li>
-                    </ul>
-                </div>
-                <div class="works">
-                    <img src="img/sec_1/work_1.png" alt="">
-                    <img src="img/sec_1/work_2.png" alt="">
-                    <img src="img/sec_1/work_3.png" alt="">
-                </div>
+            <div class="col-md-8 my-pb-5">
+                <h1>3 практических инструмента для увеличения зарплаты и получения должности <br>ТОП-менеджера</h1>
+                <p class="undertitle">От Константина Лашкевича - профессионального СЕО и идеолога позитивного
+                    менеджмента</p>
+                <form class="form-inline my-2 my-lg-0 my-header-btn">
+                    <a href="https://p.smartexpert.net/login" class="btn btn-success-2 my-2 my-sm-0">Получить доступ</a>
+                </form>
             </div>
+
             <div class="col-md-4">
                 <div class="img_wrapp">
                     <img src="img/sec_1/konstantin.png" alt="SE">
                 </div>
             </div>
+
         </div>
+
     </div>
 </section>
+
 <!-- / sec_profile -->
 <!-- sec_bio -->
-<section id="about-expert" class="sec sec_bio">
+<section id="reason-expert" class="sec sec_reason">
     <div class="container">
-        <img alt="" class="abs_pic circle" src="img/abs_pic/circle.svg">
-        <img alt="" class="abs_pic circle_orange" src="img/abs_pic/circle_orange.svg">
-        <img alt="" class="abs_pic stone" src="img/abs_pic/stone.svg">
-        <div class="row align-items-center">
-            <div class="col-lg-5 d-flex justify-content-center">
-                <div class="card_transparent">
-                    <div class="icon_avatar" style="background-image: url('img/sec_bio/konstantin.jpg')"></div>
-                    <h5>Константин Лашкевич</h5>
-                    <div class="soc_links_wrapp">
-                        <a href="#" class="item"><img src="img/soc_links/fb.svg" alt="fb"></a>
-                        <a href="#" class="item"><img src="img/soc_links/vk.svg" alt="vk"></a>
-                        <a href="#" class="item"><img src="img/soc_links/tw.svg" alt="tw"></a>
-                        <a href="#" class="item"><img src="img/soc_links/tg.svg" alt="tg"></a>
-                        <a href="#" class="item"><img src="img/soc_links/in.svg" alt="in"></a>
-                    </div>
-                    <a href="#" class="btn btn-blue">История взлетов и падений</a>
-                </div>
-            </div>
-            <div class="col-lg-7">
-                <div class="card">
-                    <img src="img/sec_bio/quote.svg" alt="quote" class="quote">
-                    <p>Привет! <br> Меня зовут Константин Лашкевич. Уже более 20 лет я в бизнесе с акционерами Forbes,
-                        11 лет управлял холдингами и выводил их в лидеры отрасли. Мой путь начался в университете, когда
-                        я создал несколько бизнесов,
-                        чтобы оплатить свое обучение по специальности “Менеджмент”. </p>
-                    <p>Спустя долгие годы собственного бизнеса и управления холдингами - я собрал резульаттивные
-                        практики, методы, инструменты и стратегии в методологию “Позитивного Менеджмента”. <br> Я обучаю
-                        этому ТОП-менеджеров крупных
-                        компаний и собственников, помогая им создавать эффективные команды и выводить холдинги в лидеры
-                        отрасли. </p>
-                    <p>Я верю в то, что мотивация людей через обучение и стремление к высоким целям создает прорывы в
-                        личных и корпоративных результатах. Моя идеология подтверждена практикой и сейчас я рад передать
-                        свои знания и навыки через
-                        <span class="font-weight-bold">Акселерацию Людей и Бизнесов.</span></p>
-                    <p class="font-weight-bold"><i>“Позитивный менеджмент - это новые прорывы, достижения и успех!”</i>
-                    </p>
-                </div>
+        <div class="row p-3">
+            <h2 class="col-12 mt-5 mb-5">Почему я делюсь с тобой своими знаниями и опытом? И нужно ли тебе ко мне прислушиваться?</h2>
+            <div class="col-12 d-flex row justify-content-center w-100 m-0">
+                <div class="reason reason-1 col-lg-5 col-md-12 mb-3  mt-3 d-flex align-items-center"><img alt="" src="./img/sec_reason/r1.png"/><p>20 лет в бизнесе с акционерами FORBES</p></div>
+                <div class="reason reason-2 col-lg-5 col-md-12 mb-3  mt-3 d-flex align-items-center"><img alt="" src="./img/sec_reason/r2.png"/><p>Инвестор и партнер в проекте "Smart Expert", идеолог позитивного менеджмента</p></div>
+                <div class="reason reason-3 col-lg-5 col-md-12 mb-3  mt-3 d-flex align-items-center"><img alt="" src="./img/sec_reason/r3.png"/><p>11 лет управления холдингами с общим оборотом более
+                    $1,8 млрд. в год</p></div>
+                <div class="reason reason-4 col-lg-5 col-md-12 mb-3 mt-3 d-flex align-items-center"><img alt="" src="./img/sec_reason/r4.png"/><p>Прошел путь от стажера до бизнес партнера и инвестора</p></div>
+                <div class="reason reason-5 col-lg-5 col-md-12 mb-3 mt-3 d-flex align-items-center"><img alt="" src="./img/sec_reason/r5.png"/><p>Возглавлял холдинги RFP Group, "ННК", "Вторчермет НЛМК" и вывел в лидеры рынка</p></div>
             </div>
         </div>
     </div>
 </section>
+<!-- / sec_bio -->
+<!-- sec_offer -->
+
+
+<!-- / sec_profile -->
+<!-- sec_bio -->
+<!--<section id="about-expert" class="sec sec_bio">-->
+<!--    <div class="container">-->
+<!--        <img alt="" class="abs_pic circle" src="img/abs_pic/circle.svg">-->
+<!--        <img alt="" class="abs_pic circle_orange" src="img/abs_pic/circle_orange.svg">-->
+<!--        <img alt="" class="abs_pic stone" src="img/abs_pic/stone.svg">-->
+<!--        <div class="row align-items-center">-->
+<!--            <div class="col-lg-5 d-flex justify-content-center">-->
+<!--                <div class="card_transparent">-->
+<!--                    <div class="icon_avatar" style="background-image: url('img/sec_bio/konstantin.jpg')"></div>-->
+<!--                    <h5>Константин Лашкевич</h5>-->
+<!--                    <div class="soc_links_wrapp">-->
+<!--                        <a href="#" class="item"><img src="img/soc_links/fb.svg" alt="fb"></a>-->
+<!--                        <a href="#" class="item"><img src="img/soc_links/vk.svg" alt="vk"></a>-->
+<!--                        <a href="#" class="item"><img src="img/soc_links/tw.svg" alt="tw"></a>-->
+<!--                        <a href="#" class="item"><img src="img/soc_links/tg.svg" alt="tg"></a>-->
+<!--                        <a href="#" class="item"><img src="img/soc_links/in.svg" alt="in"></a>-->
+<!--                    </div>-->
+<!--                    <a href="#" class="btn btn-blue">История взлетов и падений</a>-->
+<!--                </div>-->
+<!--            </div>-->
+<!--            <div class="col-lg-7">-->
+<!--                <div class="card">-->
+<!--                    <img src="img/sec_bio/quote.svg" alt="quote" class="quote">-->
+<!--                    <p>Привет! <br> Меня зовут Константин Лашкевич. Уже более 20 лет я в бизнесе с акционерами Forbes,-->
+<!--                        11 лет управлял холдингами и выводил их в лидеры отрасли. Мой путь начался в университете, когда-->
+<!--                        я создал несколько бизнесов,-->
+<!--                        чтобы оплатить свое обучение по специальности “Менеджмент”. </p>-->
+<!--                    <p>Спустя долгие годы собственного бизнеса и управления холдингами - я собрал резульаттивные-->
+<!--                        практики, методы, инструменты и стратегии в методологию “Позитивного Менеджмента”. <br> Я обучаю-->
+<!--                        этому ТОП-менеджеров крупных-->
+<!--                        компаний и собственников, помогая им создавать эффективные команды и выводить холдинги в лидеры-->
+<!--                        отрасли. </p>-->
+<!--                    <p>Я верю в то, что мотивация людей через обучение и стремление к высоким целям создает прорывы в-->
+<!--                        личных и корпоративных результатах. Моя идеология подтверждена практикой и сейчас я рад передать-->
+<!--                        свои знания и навыки через-->
+<!--                        <span class="font-weight-bold">Акселерацию Людей и Бизнесов.</span></p>-->
+<!--                    <p class="font-weight-bold"><i>“Позитивный менеджмент - это новые прорывы, достижения и успех!”</i>-->
+<!--                    </p>-->
+<!--                </div>-->
+<!--            </div>-->
+<!--        </div>-->
+<!--    </div>-->
+<!--</section>-->
 <!-- / sec_bio -->
 <!-- sec_offer -->
 <section id="my_expertize" class="sec sec_offer">
