--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             <div class="row">
                 <div class="col-md-8">
                     <h1>Виталий Бихунов</h1>
-                    <p class="undertitle"><span>основатель ТМ Мега Турник,</span> <span>сообщества активных людей Катана Груп,</span> <span>основатель и ведущий тренер</span> <span>обучающего проекта Катана Груп</span> </p>
+                    <p class="undertitle"><span>основатель ТМ Мега Турник,</span> <span>сообщества активных людей Катана Груп,</span> <span>основатель и ведущий тренер обучающего проекта Катана Груп</span> </p>
                     <div class="card">
                         <ul>
                             <li><img src="img/sec_1/ok.svg" alt="ok">Основатель ТМ Мега Турник</li>
@@ -107,34 +107,21 @@
                 <div class="col-lg-7">
                     <div class="card">
                         <img src="img/sec_bio/quote.svg" alt="quote" class="quote">
-                        <p>У тебя есть мечта?<br>
-                            А ты уже знаешь, что нужно сделать, чтобы ее воплотить?
+                        <p>Приветствую, Друзья!</p>
+                        <p>
+                            Меня зовут Виталий Бихунов. Я:<br>
+                            - основатель ТМ Мега Турник<br>
+                            - владелец Мега Продкшн<br>
+                            - основатель сообщества активных людей Катана Груп<br>
+                            - основатель и ведущий тренер обучающего проекта Катана Груп<br>
+                            - Сертифицированный бизнес тренер IPS<br>
+                            - Сертифицированный бизнес тренер Бизнес Молодость - 4 место в рейтинге самых результативных тренеров мира по версии БМ 2018<br>
+                            - Сертифицированный бизнес тренер обучающей организации номер 1 в мире Success Resource
                         </p>
                         <p>
-                            Какие решения, какие ежедневные действия, какие промежуточные результаты и в какие сроки приведут тебя к твоей мечте?
+                            С огромным удовольствием помогу вам достичь вашей личной цели. Или помогу вывести ваш бизнес на новый уровень и кратно увеличить прибыль.
                         </p>
-                        <p>
-                            Как часто ставили себе яркие и интересные цели, действовали, вкладывали море усилий и, по каким-то причинам, не получалось?
-                        </p>
-                        <p>
-                            Появлялись ли у тебя вопросы:
-                        </p>
-                        <p>
-                            - где взять Силы и энергию на следующий шаг? <br>
-                            - как преодолевать страхи?<br>
-                            - как переносить падения и радоваться победам?<br>
-                            - как системно и четко идти к своим целям, получая при этом удовольствие от процесса?<br>
-                            - как жить той наполненной и яркой жизнью, о которой ты мечтаешь?<br>
-                        </p>
-                        <p>
-                            Ответы на эти и многие другие вопросы, я собирал по всему миру и с удовольствием готов поделиться ими с тобой.
-                        </p>
-                        <p>
-                            Если у тебя есть цель и ты действительно хочешь ее достичь, буду рад провести тебя по этому яркому пути!
-                        </p>
-                        <p>
-                            Жми на кнопку внизу страницы и узнай подробности!
-                        </p>
+
                     </div>
                 </div>
             </div>
@@ -215,7 +202,208 @@
                     </div>
                 </div>
             </div>
+            <div class="card with-date">
+                <img alt="" class="abs_pic stone" src="img/abs_pic/stone_orange.svg">
+                <div class="media align-items-center">
+                    <img class="mr-md-3 media-image" src="img/sec_my_projects/katana.png" alt="Generic placeholder image" style="max-width: 200px;">
+                    <div class="media-body">
 
+                        <p class="card_subtitle">Живое 2-х дневное мероприятие</p>
+                        <h4 class="card_title">Денежное мышление</h4>
+                        <div class="b-card-body">
+                            <p><b>Двухдневный тренинг от основателя Катана Груп (входит в ТОП-5 самых результативных бизнес тренеров мира по рейтингу Бизнес-Молодости)
+                                ДЕНЕЖНОЕ МЫШЛЕНИЕ</b><br>
+                                Запрограммируй себя на  приумножение дохода </p>
+                              <p>  <b>БОЛЬШИНСТВО ЛЮДЕЙ</b>  СТАЛКИВАЕТСЯ КАК МИНИМУМ  С ОДНОЙ ИЗ <b>ЭТИХ ПРОБЛЕМ</b> <br>
+                                <ol>
+                                  <li>Ты неуверенно чувствуешь себя в кругу обеспеченных и успешных людей</li>
+                                  <li>Каждый раз запуск нового проекта закачивается провалом: кажется, что деньги ускользают от тебя</li>
+                                  <li>Сложно найти золотую середину: ты либо слишком экономишь, либо тратишь средства на ненужные вещи</li>
+                                  <li>Зарабатываешь больше — и увеличивается количество трат: еле хватает к концу месяца</li>
+                                  <li>Ты упираешься в финансовой потолок: вроде зарабатываешь, но не можешь выйти на новый уровень прибыли</li>
+                                  <li>Ты — фрилансер и не знаешь, как превратить навыки в прибыльный бизнес</li>
+                                  <li>Твои доходы зависят не от тебя: приходится надеяться на волю случая и прогибаться под обстоятельства.</li>
+                                  <li>Иногда кажется, что ты просто недостоин (-на) обеспеченной жизни.</li>
+                                </ol> </p>
+                              <p>  <b>“ДЕНЕЖНОЕ МЫШЛЕНИЕ” — ЭТО ДВУХДНЕВНЫЙ ИНТЕНСИВНЫЙ ТРЕНИНГ, ОБЪЕДИНЯЮЩИЙ НАУКУ УПРАВЛЕНИЯ ДЕНЬГАМИ И ПСИХОЛОГИЮ</b><br>
+                                Здесь не будет сухой теории, которой и так хватает на других практикумах. У нас нет на это времени. Ты не будешь думать, что внедрять, а что нет. На тренинге тебя ждет практическая проработка установок, которые стали камнем преткновения между тобой и успехом.
+                                Выйдя из зала, ты уже получишь результат </p>
+
+                                <p>ДЛЯ КОГО?</p>
+
+                              <p>  ДЛЯ ПРЕДПРИНИМАТЕЛЕЙ<br>
+                                которые уперлись в потолок и не могут выйти на новый уровень дохода. Их тормозят вредные привычки, сомнительные друзья, неуверенность и еще что-то, чего они не могут понять.
+                                Все попытки зарабатывать больше — проваливаются. </p>
+
+                              <p>  ДЛЯ ФРИЛАНСЕРОВ<br>
+                                не желающих повторить судьбу своих родителей.
+                                Они хотят стать авторами жизни, купить жилье (не в ипотеку), авто (не в кредит), ездить на отдых и даже не задумываться над тем, хватит им на это денег или нет. </p>
+                                ЧТО ТЫ <b>ПОЛУЧИШЬ</b> ПОСЛЕ ТРЕНИНГА
+                                <ol>
+                                  <li>Определишь и проработаешь внутренние психологические ограничения, программирующие тебя на бедность.</li>
+                                  <li>Избавишься от “синдрома беспомощности” и научишься решать финансовые проблемы любой сложности.</li>
+                                  <li>Изменишь мышление бедного и несчастного человека на мышление богатого и счастливого человека.</li>
+                                  <li>Поймёшь причины, из-за которых ты до сих пор не богат — и узнаешь, как их устранить.</li>
+                                  <li>Запрограммируешь сценарий своей идеальной жизни через пирамиду Дилтса</li>
+                                  <li>Освоишь методику GROW — ведущий мировой инструмент достижения целей.</li>
+                                  <li>Узнаешь лайфхаки по увеличению дохода от участников.</li>
+                                  <li>Получишь реальный результат, выполняя практические упражнения.</li>
+                                </ol>
+
+                                <p><b>ПРОГРАММА</b> МЕРОПРИЯТИЯ</p>
+                                <p>  ДЕНЬ<br>
+                                  1<br>
+                                  - Почему наше окружение решает, сколько мы заработаем.<br>
+                                  - Как научиться не только правильно ставить, но и правильно достигать финансовых целей.<br>
+                                  - Мышление “богатого” и “бедного”: как отличить. Типы денежных сценариев: определяем твой.<br>
+                                  - Поиск и устранение внутренних запретов и ограничений.<br>
+                                  - Сила прошлого: как перестать плыть по течению и создать идеальное будущее.<br>
+                                  - Сила духа: как преодолевать препятствия и вызовы.<br>
+                                  - Стратегии достижения результата в знакомых и незнакомых нишах
+                                </p>
+                              <p>ДЕНЬ<br>
+                              2<br>
+                               - Получать или отдавать: жизненная философия богатых людей.<br>
+                               - Энергия намерения или как материализовать свои мысли о финансовой свободе.<br>
+                               - Правильная система распределения денег.<br>
+                               - Построение денежных убеждений, которые помогут тебе видеть скрытые возможности.<br>
+                               - Типы денежного мышления: какое у тебя.<br>
+                               - Лидерство, внутренняя сила и деньги.<br>
+                               - Практика на борьбу со страхом.<br>
+                               - Практические кейсы по старту и развитию своего бизнеса.<br>
+                               - Позитив: как настроиться на энергию достижения и побеждать всегда и во всем.</p>
+
+                            </p>
+                        </div>
+                        <div class="dropdown-divider"></div>
+                        <div class="b-card-footer">
+                            <div class="counter">Продолжительность мероприятия 2 дня</div>
+                            <div class="views">
+                                <img class="mr-1" src="img/icons/human.svg">
+                                100
+                            </div>
+                            <a class="link btn btn-blue" href="http://bikhunov.com/denezhnoe-myshlenie/" target="_blank">Подробнее</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="card with-date">
+                <img alt="" class="abs_pic stone" src="img/abs_pic/stone_orange.svg">
+                <div class="media align-items-center">
+                    <img class="mr-md-3 media-image" src="img/sec_my_projects/katana.png" alt="Generic placeholder image" style="max-width: 200px;">
+                    <div class="media-body">
+
+                        <p class="card_subtitle">офлайн/онлайн</p>
+                        <h4 class="card_title">Бизнес Разборы</h4>
+                        <div class="b-card-body">
+                          <p>4-недельный практический интенсив от Katana Group и Виталия Бихунова
+                          БИЗНЕС-РАЗБОРЫ
+                          КРАТНОЕ УВЕЛИЧЕНИЕ ДОХОДА ПОД НАСТАВНИЧЕСТВОМ БИЗНЕС-ТРЕНЕРОВ</p>
+                          <p>
+                          <p>СЕРТИФИЦИРОВАННЫЕ ТРЕНЕРА KATANA GROUP
+                          ПОМОГЛИ УЖЕ СВЫШЕ
+                          200+
+                          ПРЕДПРИНИМАТЕЛЯМ
+                          И ФРИЛАНСЕРАМ
+                          КАК ЭТО
+                          ПРОИСХОДИТ</p>
+                          <p>Шаг 01<br>
+                          Ты ставишь амбициозную финансовую цель на 1 месяц (к примеру, удвоить доход или запустить бизнес)</p>
+                          <p>Шаг 02<br>
+                          Получаешь детальный разбор твоего бизнеса (или бизнес-идеи) на первой живой встрече с тренерами.</p>
+                          <p>Шаг 03<br>
+                          Тестируешь стратегии, гипотезы, быстро избавляясь от неэффективных и грамотно развивая самые перспективные</p>
+                          <p>Шаг 04<br>
+                          Отчитываешься о результатах на еженедельных живых встречах группы — и получаешь рекомандации от тренеров и коллег по обучению.</p>
+                          <p>Шаг 05<br>
+                          Находишься в постоянной коммуникации с тренером, отправляя ему ежедневные отчеты и получая от него персональную обратную связь.</p>
+                          <p>Шаг 06<br>
+                          Ежедневно улучшаешь финансовые показатели — и</p>
+
+                          ДОСТИГАЕШЬ ПОСТАВЛЕННОЙ ЦЕЛИ ЧЕРЕЗ 1 МЕСЯЦ!</p> </p>
+
+                          <p>
+                          ДЛЯ КОГО СОЗДАН <b>ЭТОТ ИНТЕНСИВ</b>
+                          <ul type="none">
+                            <li>Бизнес не приносит стабильного дохода: один месяц ты в плюсе, а второй в минусе.</li>
+                            <li>Вынашиваешь бизнес-идею, но из-за высоких рисков и отсутствия опыта не решаешься воплотить её в жизнь.</li>
+                            <li>Имеешь регулярный доход, но все попытки брать новые вершины и удвоить его, тщетны.</li>
+                            <li>Тестируешь сотни гипотез, которые теоретически могут сделать тебя богаче, но безрезультатно.</li>
+                            <li>Из-за постоянных операционных “пожаров” нет времени задумываться о масштабировании</li>
+                            <li>Постепенно теряешь мотивацию, когда твои друзья зарабатывают больше и больше, а у тебя не получается.</li>
+                            <li>Хочешь обрести финансовую свободу, чтобы не считать деньги и проводить больше времени с близкими.</li>
+                            <li>Постоянно слышишь от знакомых: “Не рискуй. Радуйся тому, что есть”.</li>
+                            <li>Чувствуешь, что можешь намного больше, но понятие не имеешь, как этого “большего” достичь.</li>
+                          </ul>
+                        </p><p>
+                          ЧТО ТЕБЕ СТОИТ ЗНАТЬ
+                          <b>О БИЗНЕС-РАЗБОРАХ</b><br>
+                          НЕДЕЛИ<br>
+                          4<br>
+                          интенсивной работы над достижением цели<br>
+                          ЖИВЫХ
+                          ЗАНЯТИЙ<br>
+                          5<br>
+                          с тренерами курса по проработк твоих результатов<br>
+                          ДНЕЙ В
+                          НЕДЕЛЮ<br>
+                          7<br>
+                          интенсивной работы над достижением цели<br>
+                          2х <br>
+                          2-кратное умножение дохода на выходе<br>
+                          <b>БИЗНЕС-РАЗБОРЫ</b> — это 4-недельный интенсив для тех, кто устал ходить на
+                          бесконечные бизнес-тренинги и хочет просто поставить цель — и достичь её.
+                          В рамках интенсива тренеры создадут для тебя 3 условия, которые исключат
+                          возможность “недостижения” цели.
+                          <b>Первое условие</b> — ответственность за невыполнение заданий.
+                          <b>Второе условие</b> — система ежедневных отчетов и обратная связь от тренера.
+                          <b>Третье условие</b> — еженедельный подробный разбор твоих результатов тренером и его сертифицированными ассистентами
+                        </p>
+
+                          <p><b>КАК ПРОХОДЯТ</b>
+                          ЖИВЫЕ ЗАНЯТИЯ
+                          LIVE<br>
+                          Раз в неделю тебе предстоит встречаться с тренерами и коллегами по курсу в уютном ресторане Киева.
+                          Виталий Бихунов и команда аттестованных бизнес-тренеров будут отмечать твой прогресс и делиться советами для достижения финансовой цели.
+                          Более того: делиться рекомендациями с тобой будут другие участники интенсива. Таким образом, ты получишь ценный брейншторм с множеством вариантов решений.
+                          К их помощи ты можешь обращаться в любое время через закрытый Telegram-чат. </p>
+
+
+                          <p>ВАЖНО!
+                          ПОМИМО <b>УВЕЛИЧЕНИЯ ДОХОДА</b>,
+                          УЧАСТНИКИ ИНТЕНСИВА
+                          ПОЛУЧАЮТ <b>РЯД “ПОБОЧНЫХ
+                          ЭФФЕКТОВ”</b></p>
+                          <p>+1<br>
+                          Избавление от излишней импульсивности и медлительности в принятии решений</p>
+                          <p>+2<br>
+                          Способность контролировать бизнес-процессы (маркетинг, продажи, работа с клиентами, производство, управление персоналом и т.д.)</p>
+                          <p>+3<br>
+                          Обретение “нирваны” (долгожданной стабильности) в жизни, в работе и на банковском счету.</p>
+                          <p>+4<br>
+                          Создание работающей стратегии масштабирования и развития бизнеса</p>
+                          <p>+5<br>
+                          Умение отличать выгодные бизнес-возможности от невыгодных</p>
+                          <p>+6<br>
+                          Построение взаимовыгодной системы мотивации для команды: лучшие не уйдут, а ты не останешься в минусе.</p>
+                          <p>+7<br>
+                          Избавление от внутренних ограничений “я не смогу” и умение добиваться результатов в короткие сроки.</p>
+                          <p>+8<br>
+                          Способность сохранять и умножать результат в будущем самостоятельно, без поддержки тренеров.</p>
+
+                        </div>
+                        <div class="dropdown-divider"></div>
+                        <div class="b-card-footer">
+                            <div class="counter">Продолжительность 1 месяц. 5 еженедельных встреч</div>
+                            <div class="views">
+                                <img class="mr-1" src="img/icons/human.svg">
+                                200
+                            </div>
+                            <a class="link btn btn-blue" href="https://bikhunov.com/biznes-razbory/" target="_blank">Подробнее</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
             <div class="card card-with-table">
                 <img alt="" class="abs_pic stone2" src="img/abs_pic/stone.svg">
                 <img alt="" class="abs_pic dubl_line_vertical" src="img/abs_pic/dubl_line.svg">
@@ -499,6 +687,7 @@
                         <p>компания по производству скалодромов.</p>
                         <i>За время прохождения обучающей программы, смог четко поставить цель и отработал разные варианты ее достижения. У меня сработал отказ от мелких заказов с мелкими чеками и концентрация только на крупных заказах.
                             Пришел на проект зарабатывая 3000$, закрыл за программу финансовую цель в сумме 7075$.
+                            <a href="https://youtu.be/1O_2aJMjoUg" target="_blank">Видеоотзыв</a></i>
                         </i>
                     </div>
                 </div>
