fix: edits 1-5 ready

--- a/index.html
+++ b/index.html
@@ -282,6 +282,8 @@
         <div class="row m-0 pt-5 pb-5">
             <div class="col-5 img-box">
                 <img alt="" src="./img/sec_form/man.png">
+                <img alt="" class="filter" src="./img/sec_form/man-bg.png">
+
             </div>
             <div class="col-12 col-md-7">
                 <h2>Ты готов начать свой путь к реальным результатам и прорыву в карьере?!</h2>
