--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
           integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="css/newland.css">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -25,16 +26,16 @@
     <div class="collapse navbar-collapse" id="navbarsExampleDefault">
         <ul class="navbar-nav mr-auto">
             <li class="nav-item">
-                <a class="nav-link" href="#my-projects">Мой опыт</a>
+                <a class="nav-link" href="#reason-expert">Мой опыт</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#my_expertize">Моя экспертность</a>
+                <a class="nav-link" href="#mentor">Моя экспертность</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#me_mentor">Я - наставник</a>
+                <a class="nav-link" href="#progress">Я - наставник</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#reviews">Отзывы</a>
+                <a class="nav-link" href="#methods">Отзывы</a>
             </li>
         </ul>
         <form class="form-inline my-2 my-lg-0">
@@ -47,8 +48,8 @@
 <section class="sec sec_profile">
     <div class="container">
         <div class="row">
-            <div class="col-md-8 my-pb-5">
-                <h1>3 практических инструмента для увеличения зарплаты и получения должности <br>ТОП-менеджера</h1>
+            <div class="col-md-8 my-pb-5 pr-0 pl-0">
+                <h1>3 практических инструмента<br> для увеличения зарплаты и<br> получения должности <br>ТОП-менеджера</h1>
                 <p class="undertitle">От Константина Лашкевича - профессионального СЕО и идеолога позитивного
                     менеджмента</p>
                 <form class="form-inline my-2 my-lg-0 my-header-btn">
@@ -69,28 +70,31 @@
 
 <!-- / sec_profile -->
 <!-- sec_reasons -->
-<section id="reason-expert" class="sec sec_reason">
+<section id="reason-expert" class="sec sec_reason pb-4">
     <div class="container">
-        <div class="row p-3">
-            <h2 class="col-12 mt-5 mb-5">Почему я делюсь с тобой своими знаниями и опытом? И нужно ли тебе ко мне
+        <div class="row">
+            <h2 class="col-12 mt-5 mb-5">Почему я делюсь с тобой своими знаниями и<br> опытом? И нужно ли тебе ко мне
                 прислушиваться?</h2>
-            <div class="col-12 d-flex row justify-content-center w-100 m-0">
-                <div class="reason reason-1 col-lg-5 col-md-12 mb-3  mt-3 d-flex align-items-center"><img alt=""
+
+            <div class="col-12 d-flex row justify-content-between w-100 m-0 p-0">
+                <div class="reason reason-1 col-lg-auto col-md-12 mb-3  mt-3 d-flex align-items-center "><img alt=""
                                                                                                           src="img/sec_reasons/r1.png"/>
                     <p>20 лет в бизнесе с акционерами FORBES</p></div>
-                <div class="reason reason-2 col-lg-5 col-md-12 mb-3  mt-3 d-flex align-items-center"><img alt=""
+                <div class="reason reason-2 col-lg-auto col-md-12 mb-3  mt-3 d-flex align-items-center"><img alt=""
                                                                                                           src="img/sec_reasons/r2.png"/>
                     <p>Инвестор и партнер в проекте "Smart Expert", идеолог позитивного менеджмента</p></div>
-                <div class="reason reason-3 col-lg-5 col-md-12 mb-3  mt-3 d-flex align-items-center"><img alt=""
+                <div class="reason reason-3 col-lg-auto col-md-12 mb-3  mt-3 d-flex align-items-center"><img alt=""
                                                                                                           src="img/sec_reasons/r3.png"/>
                     <p>11 лет управления холдингами с общим оборотом более
                         $1,8 млрд. в год</p></div>
-                <div class="reason reason-4 col-lg-5 col-md-12 mb-3 mt-3 d-flex align-items-center"><img alt=""
+                <div class="reason reason-4 col-lg-auto col-md-12 mb-3 mt-3 d-flex align-items-center"><img alt=""
                                                                                                          src="img/sec_reasons/r4.png"/>
                     <p>Прошел путь от стажера до бизнес партнера и инвестора</p></div>
-                <div class="reason reason-5 col-lg-5 col-md-12 mb-3 mt-3 d-flex align-items-center"><img alt=""
+                <div class="col-12 d-flex p-0 m-0 justify-content-center">
+                <div style="justify-self: center" class="reason reason-auto col-lg-5 col-md-12 mb-3 mt-3 d-flex align-items-center"><img alt=""
                                                                                                          src="img/sec_reasons/r5.png"/>
                     <p>Возглавлял холдинги RFP Group, "ННК", "Вторчермет НЛМК" и вывел в лидеры рынка</p></div>
+                </div>
             </div>
             <p class="col-12 text-center mt-4 drop-link-text">Ниже ты узнаешь, чем я с тобой поделюсь и поймешь, почему
                 тебе это важно!</p>
@@ -106,15 +110,17 @@
 <section id="mentor" class="sec sec_mentor sec_duplicated">
     <div class="container">
         <div class="row pt-4 pb-5">
-            <h2 class="col-12 text-center mt-5 mb-5">Эффективный ТОП-менеджер: как получить должность ТОПа в престижной
+            <h2 class="col-12 text-center mt-5 mb-5">Эффективный ТОП-менеджер: как получить <br>должность ТОПа в престижной
                 компании,
-                и какие навыки для этого необходимы?</h2>
+                и какие<br> навыки для этого необходимы?</h2>
             <h3 class="col-12 text-center mb-4">Получи практический 20-ти летний опыт Константина Лашкевича, ужатые в 5
-                минут
+                минут<br>
                 видео и краткой PDF инструкции </h3>
-            <div class="col-12">
-                <p class="ml-4"><b>Ты получишь:</b></p>
-                <div class="row d-flex block-grid justify-content-center d-flex align-items-center">
+            <div class="col-12 mt-4 p-0">
+                <div class="row d-flex block-grid justify-content-between d-flex align-items-center">
+                    <p class="col-md-12 col-lg-5 duplicated-header"><b>Ты получишь:</b></p>
+                    <p class="col-md-12 col-lg-5 duplicated-header"></p>
+
                     <div class="block-grid_item col-lg-5 col-md-12 mb-3 mt-3 bg-white">
                         <img alt="" src="img/sec_duplicated/check.png">
                         <p>Кейсы из моей реальной жизни: как и почему тебя могут повысить на должность
@@ -158,14 +164,15 @@
 <section id="secrets" class="sec sec_mentor sec_duplicated">
     <div class="container">
         <div class="row pt-4 pb-5">
-            <h2 class="col-12 text-center mt-5 mb-5">Как выбрать наставника для Х-кратного карьерного роста и сделать
+            <h2 class="col-12 text-center mt-5 mb-5">Как выбрать наставника для Х-кратного карьерного<br> роста и сделать
                 настоящий прорыв в результатах?</h2>
             <h3 class="col-12 text-center mb-4">Мой первый наставник запомнился мне на всю жизнь... Такого *** и в то же
                 время столь мощного менеджера я не встречал. И знаете - он стал фундаментом для моего развития и
                 результата, который я имею сейчас. </h3>
-            <div class="col-12">
-                <p class="ml-4"><b>Я поделюсь с тобой своим опытом и ты узнаешь: </b></p>
-                <div class="row d-flex block-grid justify-content-center d-flex align-items-center">
+            <div class="col-12 mt-4 p-0">
+                <div class="row d-flex block-grid justify-content-between d-flex align-items-center">
+                    <p class="col-md-12 col-lg-5 duplicated-header"><b>Я поделюсь с тобой своим опытом и ты узнаешь: </b></p>
+                    <p class="col-md-12 col-lg-5 duplicated-header"></p>
                     <div class="block-grid_item col-lg-5 col-md-12 mb-3 mt-3 bg-white">
                         <img alt="" src="img/sec_duplicated/check.png">
                         <p>Почему наставник - это лучшая возможность Х-кратно вырасти профессионально </p>
@@ -213,9 +220,11 @@
                 моем пути попадались “полные неучи” в ТОП-менеджерах, и умные ребята, которым не хватало смелости взять
                 себя в руки и начать расти по карьерной лестнице. Отсутствие смелости - заставляло их оставаться на том
                 же уровне заработка, что в прошлых годах... </h3>
-            <div class="col-12">
-                <p class="ml-4"><b>Чтобы этой ситуации не происходило с тобой, я расскажу: </b></p>
-                <div class="row d-flex block-grid justify-content-center d-flex align-items-center">
+            <div class="col-12 mt-4 p-0">
+
+                <div class="row d-flex block-grid justify-content-between d-flex align-items-center">
+                    <p class="col-md-12 col-lg-5 duplicated-header"><b>Чтобы этой ситуации не происходило с тобой, я расскажу: </b></p>
+                    <p class="col-md-12 col-lg-5 duplicated-header"></p>
                     <div class="block-grid_item col-lg-5 col-md-12 mb-3 mt-3 bg-white">
                         <img alt="" src="img/sec_duplicated/check.png">
                         <p>Как правильно просить о повышении зарплаты? </p>
@@ -260,18 +269,46 @@
         <div class="row pt-5 pb-5">
             <h2 class="col-12 text-center mb-5">Мои методики и практический опыт помогли другим <br>добиться результатов!
             </h2>
-            <div class="col-12 slider-box">
-                <div class="adaptive-slider">
-                   <div class="custom-slide">
-                       Hello
-                   </div>
-                    <div class="custom-slide">
-                        Its
+
+                <div class="sliderAuthors authors">
+                    <div class="col-12 py-5 px-4">
+                        <div class="card_profile">
+                            <div class="icon">
+                                <img src="img/sec_lesson_steps/ic_1.svg" alt="">
+                            </div>
+                            <div class="text">
+                                <h3>Обучайтесь на любом удобном устройстве</h3>
+                                <p>Сообщество Smart Expert позволяет вам развиваться и обучаться в любом месте на удобном для вас устройстве: компьютер, телефон, планшет. Вы обязательно получите максимум приятных эмоций, и самое главное - эффективно
+                                    усвоите информацию и быстро перейдете к практическим действиям!</p>
+                            </div>
+                        </div>
                     </div>
-                    <div class="custom-slide">
-                        Me
+                    <div class="col-12 py-5 px-4">
+                        <div class="card_profile">
+                            <div class="icon">
+                                <img src="img/sec_lesson_steps/ic_1.svg" alt="">
+                            </div>
+                            <div class="text">
+                                <h3>Обучайтесь на любом удобном устройстве</h3>
+                                <p>Сообщество Smart Expert позволяет вам развиваться и обучаться в любом месте на удобном для вас устройстве: компьютер, телефон, планшет. Вы обязательно получите максимум приятных эмоций, и самое главное - эффективно
+                                    усвоите информацию и быстро перейдете к практическим действиям!</p>
+                            </div>
+                        </div>
                     </div>
-                </div>
+                    <div class="col-12 py-5 px-4">
+                        <div class="card_profile">
+                            <div class="icon">
+                                <img src="img/sec_lesson_steps/ic_1.svg" alt="">
+                            </div>
+                            <div class="text">
+                                <h3>Обучайтесь на любом удобном устройстве</h3>
+                                <p>Сообщество Smart Expert позволяет вам развиваться и обучаться в любом месте на удобном для вас устройстве: компьютер, телефон, планшет. Вы обязательно получите максимум приятных эмоций, и самое главное - эффективно
+                                    усвоите информацию и быстро перейдете к практическим действиям!</p>
+                            </div>
+                        </div>
+                    </div>
+
+
             </div>
         </div>
     </div>
@@ -310,7 +347,7 @@
 </section>
 
 <!-- footer -->
-<footer class="sec">
+<footer class="sec pt-5 pb-5">
     <div class="container">
         <nav>
             <span>Копирайт 2019</span>
@@ -363,8 +400,8 @@
             slideMargin: 0,
             loop: true
         });
-        $('.sliderAuthors').lightSlider({
-            item: 3,
+        let sliderAuthors = $('.sliderAuthors').lightSlider({
+            item: 1,
             slideMargin: 0,
             addClass: '',
             mode: "slide", //fade
@@ -374,10 +411,10 @@
             speed: 400, //ms'
             auto: true,
             loop: true,
-            pager: false,
+            pager: true,
             pause: 3500,
             keyPress: true,
-            controls: true,
+            controls: false,
             prevHtml: '<svg width="15" height="28" viewBox="0 0 15 28" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M14.0532 27.2416C14.4224 26.8724 14.4224 26.2724 14.0532 25.9032L2.26144 14.1346L14.0532 2.34284C14.4224 1.97363 14.4224 1.37366 14.0532 1.00445C13.684 0.635236 13.084 0.635236 12.7148 1.00445L0.276925 13.4423C0.0923196 13.6269 1.54154e-05 13.8577 1.54184e-05 14.1115C1.54211e-05 14.3423 0.0923197 14.5961 0.276925 14.7807L12.7148 27.2185C13.084 27.6108 13.684 27.6108 14.0532 27.2416Z" fill="#BDBDBD"/></svg>',
             nextHtml: '<svg width="15" height="28" viewBox="0 0 15 28" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M14.0532 27.2416C14.4224 26.8724 14.4224 26.2724 14.0532 25.9032L2.26144 14.1346L14.0532 2.34284C14.4224 1.97363 14.4224 1.37366 14.0532 1.00445C13.684 0.635236 13.084 0.635236 12.7148 1.00445L0.276925 13.4423C0.0923196 13.6269 1.54154e-05 13.8577 1.54184e-05 14.1115C1.54211e-05 14.3423 0.0923197 14.5961 0.276925 14.7807L12.7148 27.2185C13.084 27.6108 13.684 27.6108 14.0532 27.2416Z" fill="#BDBDBD"/></svg>',
             enableTouch: true,
@@ -386,10 +423,17 @@
             responsive: [{
                 breakpoint: 767.98,
                 settings: {
+                    controls: true,
                     item: 1,
                 }
             }]
+        });
+        $('.sleder_wrapp .arrow-prev').click(function() {
+            sliderAuthors.goToPrevSlide();
+        });
 
+        $('.sleder_wrapp .arrow-next').click(function() {
+            sliderAuthors.goToNextSlide();
         });
 
         // scrollToSection
