--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
                 <h1>3 практических инструмента<br> для увеличения зарплаты и<br> получения должности <br>ТОП-менеджера</h1>
                 <p class="undertitle">От Константина Лашкевича - профессионального СЕО и идеолога позитивного
                     менеджмента</p>
-                <form class="form-inline my-2 my-lg-0 my-header-btn">
-                    <a href="https://p.smartexpert.net/login" class="btn btn-success-2 my-2 my-sm-0">Получить доступ</a>
+                <form class="form-inline  my-lg-0 my-header-btn mt-5">
+                    <a href="https://p.smartexpert.net/login" class="btn btn-success-2 mt-3">Получить доступ</a>
                 </form>
             </div>
 
@@ -73,10 +73,10 @@
 <section id="reason-expert" class="sec sec_reason pb-4">
     <div class="container">
         <div class="row">
-            <h2 class="col-12 mt-5 mb-5">Почему я делюсь с тобой своими знаниями и<br> опытом? И нужно ли тебе ко мне
+            <h2 class="col-12 sec-header">Почему я делюсь с тобой своими знаниями и<br> опытом? И нужно ли тебе ко мне
                 прислушиваться?</h2>
 
-            <div class="col-12 d-flex row justify-content-between w-100 m-0 p-0">
+            <div class="col-12 d-flex row justify-content-between w-100 p-0 mb-3">
                 <div class="reason reason-1 col-lg-auto col-md-12 mb-3  mt-3 d-flex align-items-center "><img alt=""
                                                                                                           src="img/sec_reasons/r1.png"/>
                     <p>20 лет в бизнесе с акционерами FORBES</p></div>
@@ -96,9 +96,9 @@
                     <p>Возглавлял холдинги RFP Group, "ННК", "Вторчермет НЛМК" и вывел в лидеры рынка</p></div>
                 </div>
             </div>
-            <p class="col-12 text-center mt-4 drop-link-text">Ниже ты узнаешь, чем я с тобой поделюсь и поймешь, почему
+            <p class="col-12 text-center mt-4 drop-link-text">Ниже ты узнаешь, чем я с тобой поделюсь и<br> поймешь, почему
                 тебе это важно!</p>
-            <div class="col-12 d-flex justify-content-center mb-4 mt-3">
+            <div class="col-12 d-flex justify-content-center arrow-box mt-3">
                 <a href="#mentor">
                     <img alt="" src="./img/sec_reasons/arrow.png">
                 </a>
