--- a/index.html
+++ b/index.html
@@ -265,9 +265,9 @@
 </section>
 
 <section id="methods" class="sec sec_methods">
-    <div class="container pt-5 pb-5">
+    <div class="container">
         <div class="row pt-5 pb-5">
-            <h2 class="col-12 text-center mb-5">Мои методики и практический опыт помогли другим <br>добиться результатов!
+            <h2 class="col-12 text-center">Мои методики и практический опыт помогли другим <br>добиться результатов!
             </h2>
 
                 <div class="sliderAuthors authors">
@@ -316,7 +316,7 @@
 
 <section id="request" class="sec sec_form">
     <div class="container pt-5 pb-5">
-        <div class="row m-0 pt-5 pb-5">
+        <div class="row m-0">
             <div class="col-5 img-box">
                 <img alt="" src="./img/sec_form/man.png">
                 <img alt="" class="filter" src="./img/sec_form/man-bg.png">
