--- a/index.html
+++ b/index.html
@@ -136,6 +136,10 @@
             <img alt="" class="abs_pic circle_orange" src="img/abs_pic/circle_orange.svg">
             <div class="row align-items-center justify-content-between">
                <div class="col col-md-6 left-col">
+                 <div class="img_wrapp">
+                    <img src="img/ekaterina.jpg" class="" alt="ekaterina">
+                 </div>
+
                 <!--     <div class="embed-responsive embed-responsive-16by9">
                         <iframe src="https://www.youtube.com/embed/ZdODCz6y0kE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                     </div> -->
