--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                             <li><img src="img/sec_1/ok.svg" alt="ok">прошла обучение у Тони Роббинса,  Мантэка Чиа, Мастера Ю Джи Шина,</li>
                         </ul>
                     </div>
-                    
+
                 </div>
                 <div class="col-md-4">
                     <div class="img_wrapp">
@@ -89,7 +89,7 @@
                     <div class="card_transparent">
                         <div class="icon_avatar" style="background-image: url('img/sec_bio/ekaterina.jpg')"></div>
                         <h5>Екатерина Лашкевич </h5>
-                        <div class="soc_links_wrapp">
+                        <div class="soc_links_wrapp justify-content-center">
                         <!--    <a href="#" class="item"><img src="img/soc_links/fb.svg" alt="fb"></a>
                             <a href="#" class="item"><img src="img/soc_links/vk.svg" alt="vk"></a>
                             <a href="#" class="item"><img src="img/soc_links/tw.svg" alt="tw"></a>
@@ -132,13 +132,9 @@
             <img alt="" class="abs_pic circle_orange" src="img/abs_pic/circle_orange.svg">
             <div class="row align-items-center justify-content-between">
                <div class="col col-md-6 left-col">
-                 <div class="img_wrapp">
-                    <img src="img/ekaterina.jpg" class="" alt="ekaterina">
-                 </div>
-
-                <!--     <div class="embed-responsive embed-responsive-16by9">
-                        <iframe src="https://www.youtube.com/embed/ZdODCz6y0kE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                    </div> -->
+                     <div class="embed-responsive embed-responsive-16by9">
+                        <iframe src="https://www.youtube.com/embed/qVe-7mPBtOE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    </div>
                 </div>
                 <div class="col-xl-7 col-md-6 right-col main-txt">
                     <h2>В вопросах успеха и радости жизни в каждом ее моменте, в формировании и достижении жизни твоей мечты. для женщин вопросы женственности и женского счастья </h2>
@@ -618,7 +614,7 @@
         </div>
     </section> -->
     <!-- sec_my_articles -->
-  <!--  <section class="sec sec_latest_events">
+    <section class="sec sec_latest_events">
         <div class="container">
             <div class="sec_title">
                 <img src="img/sec_latest_events/title_label.svg" alt="title_label">
@@ -628,17 +624,17 @@
                 <div class="col-md-6 card_wrapp">
                     <div class="card">
                         <div class="embed-responsive embed-responsive-16by9">
-                            <iframe src="https://www.youtube.com/embed/ZdODCz6y0kE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                            <iframe src="https://www.youtube.com/embed/qVe-7mPBtOE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                         </div>
-                        <p>Рассказиваю откуда берется силы для достижения целей</p>
+                        <p>Обращение</p>
                     </div>
                 </div>
                 <div class="col-md-6 card_wrapp">
                     <div class="card">
                         <div class="embed-responsive embed-responsive-16by9">
-                            <iframe src="https://www.youtube.com/embed/ZdODCz6y0kE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                            <iframe src="https://www.youtube.com/embed/IL9Vtwx_8RE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                         </div>
-                        <p>Все бизнесы рано или поздно достигают потолка роста, как его пробить?</p>
+                        <p>Первый выпуск</p>
                     </div>
                 </div>
             </div>
