--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <li class="nav-item">
                     <a class="nav-link" href="#my_expertize">Моя экспертность</a>
                 </li>
-                <li class="nav-item">
+              <!--  <li class="nav-item">
                     <a class="nav-link" href="#contacts">Деловые контакты </a>
                 </li>
                 <li class="nav-item">
@@ -42,7 +42,7 @@
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#me_mentor">Я - наставник</a>
-                </li>
+                </li> -->
             </ul>
             <form class="form-inline my-2 my-lg-0">
                 <a href="https://p.smartexpert.net/login" class="btn btn-success-2 my-2 my-sm-0">Войти</a>
