--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <!-- fixed header -->
     <nav class="navbar navbar-expand-md fixed-top">
-        <a class="navbar-brand" href="#"><img src="img/logo.svg" alt=""></a>
+        <a class="navbar-brand" href="#"><span style="font-weight: 700;color: #4f4f4f; font-size: 22px;">ЛЕА</span></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon">
                 <img src="img/nav/burger.svg" alt="burger">
