--- a/index.html
+++ b/index.html
@@ -102,22 +102,38 @@
                 <div class="col-lg-7">
                     <div class="card">
                         <img src="img/sec_bio/quote.svg" alt="quote" class="quote">
-                        <p>ДАВАЙТЕ ЗНАКОМИТЬСЯ <br> Меня зовут Екатерина
-                          Я закончила Международный Эриксоновский университет коучинга. теперь я Life-коуч ICF по личному росту и отношениям, клиенты в разных странах мира
-                          Больше 16 лет жена СЕО трех холдингов  с акционерами из списка Forbes и при этом мама троих детей
-                          Кандидат экономических наук в области маркетинга
-                        </p>
-                        <p> Я не психолог и не психиатр - я практик этой Жизни На все 100% <br>
-                        Я прожила этот опыт сама и выходила на новый уровень через учителей и собственные инсайты
-                        Эксперт по мужским состояниям, мастер SSF:<br>
-                        1)Ресурсное 💪<br>
-                        2)Финансовое 💵<br>
-                        3)Состояние удовлетворенности ✨<br>
-                        Только эффективные результативные и при этом экологичные методы.
-                        Провожу персональные коуч сессии по вопросам: отношений и выхода на новый уровень💥💥💥
-                         </p>
-                        <p>Последние 5 лет занимаюсь изучением вопросов женственности, женского счастья, работы с интуицией и подсознанием, медитации.
-                        Женский ментор по вопросам женственности и ресурсного состояния.
+                          <p>ДАВАЙТЕ ЗНАКОМИТЬСЯ<br>
+                          Меня зовут Катя или просто Леа.
+                        </p> <p>
+                          Я Life-коуч ICF по личному росту, успеху и выходу на новый уровень.
+                          Я работаю с клиентами из разных странах мира.
+                        </p> <p>
+                          Я закончила Международный Эриксоновский университет коучинга.
+                          (Так что я профессиональный сертифицированный коуч.)
+                        </p><p>
+                          Кандидат экономических наук
+                          ⠀</p><p>
+                          Больше 18 лет жена СЕО трех холдингов  с акционерами из списка Forbes и мама троих детей
+                            </p><p>
+                           Я не психолог и не психиатр - я практик этой Жизни.
+
+                          На все 100%
+                          </p><p>
+                          Я прожила этот опыт сама и выходила на новый уровень через учителей и собственные инсайты.
+                            </p><p>
+                          Последние 6 лет занимаюсь изучением работы интуиции и подсознания, медитации, энергии и ресурсного состояния.
+                           </p><p>
+                          Эксперт по мужским состояниям.<br>
+                          Я использую только проверенные на себе, эффективные, результативные и при этом экологичные методы
+                            </p><p>
+                          Имею успешные кейсы по работе с мужчинами в вопросах:<br>
+                           ⁃ как жить той жизнью, которой хочу, как достичь успеха,<br>
+                           ⁃ как жить в моменте и наслаждаться, <br>
+                           ⁃ ценить то что имеешь и при этом стремиться к большему.<br>
+                            </p><p>
+                          Провожу персональные коуч сессии.
+                          </p><p>
+                          Являюсь женским ментором в вопросах женственности, женского счастья и наполненности.
                         </p>
                     </div>
                 </div>
